// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventDataSection renders formatted 1`] = `
<div>
  <div
    class=" css-bxfmzo-DataSection e9xr8173"
  >
    <div
      class="css-9q5uv6-SectionHeader e11dlz2y2"
      id="extra"
    >
      <div
        class="css-jgc6yt-Title e11dlz2y6"
      >
        <span
          class="permalink css-h3mo6t-Permalink e11dlz2y5"
        >
          <a
            class="css-ayx9xx-Anchor-PermalinkAnchor e11dlz2y3"
            href="#extra"
          >
            <svg
              class="css-8lz1ax-StyledIconLink e11dlz2y4"
              fill="#80708F"
              height="12px"
              viewBox="0 0 16 16"
              width="12px"
            >
              <path
                d="M4.58,9.5a.71.71,0,0,1-.53-.22L1.16,6.4l0,0h0L1,6.22a.49.49,0,0,1-.11-.14A3.68,3.68,0,0,1,6.06.9.49.49,0,0,1,6.2,1L9.26,4.07a.74.74,0,0,1,0,1.06.75.75,0,0,1-1.06,0L5.32,2.24l0,0A2.19,2.19,0,0,0,2.18,5.29L5.11,8.22a.75.75,0,0,1,0,1.06A.74.74,0,0,1,4.58,9.5Z"
              />
              <path
                d="M12.21,15.91A3.68,3.68,0,0,1,9.9,15.1L9.75,15l-3-3.06a.74.74,0,0,1,0-1.06.75.75,0,0,1,1.06,0l2.89,2.9h0a2.18,2.18,0,0,0,3.09-3.09h0l-2.9-2.9a.77.77,0,0,1,0-1.07.75.75,0,0,1,1.06,0L15,9.77l.11.15a3.69,3.69,0,0,1-2.87,6Z"
              />
              <path
                d="M11.92,12.69a.74.74,0,0,1-.53-.22L3.5,4.58A.75.75,0,1,1,4.56,3.52l7.89,7.89a.74.74,0,0,1,0,1.06A.71.71,0,0,1,11.92,12.69Z"
              />
            </svg>
          </a>
          <h3>
            Additional Data
          </h3>
        </span>
      </div>
      <div
        class="css-108kfzz-ButtonGrid-MergedStyles e1n9g4yq0"
      >
        <button
          aria-disabled="false"
          aria-label="Formatted"
          class="active css-1n1ixk5-StyledButton-getColors-getButtonStyles e1b8u3ky2"
          role="button"
          type="button"
        >
          <span
            class="css-at526y-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
            role="presentation"
          />
          <span
            class="css-1z0n9wg-ButtonLabel e1b8u3ky1"
          >
            Formatted
          </span>
        </button>
        <button
          aria-disabled="false"
          aria-label="Raw"
          class=" css-1uzn75c-StyledButton-getColors-getButtonStyles e1b8u3ky2"
          role="button"
          type="button"
        >
          <span
            class="css-vul34l-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
            role="presentation"
          />
          <span
            class="css-1z0n9wg-ButtonLabel e1b8u3ky1"
          >
            Raw
          </span>
        </button>
      </div>
    </div>
    <div
      class="css-1o3cuay-SectionContents e11dlz2y1"
    />
  </div>
</div>
`;

exports[`EventDataSection renders raw 1`] = `
<div>
  <div
    class=" css-bxfmzo-DataSection e9xr8173"
  >
    <div
      class="css-9q5uv6-SectionHeader e11dlz2y2"
      id="extra"
    >
      <div
        class="css-jgc6yt-Title e11dlz2y6"
      >
        <span
          class="permalink css-h3mo6t-Permalink e11dlz2y5"
        >
          <a
            class="css-ayx9xx-Anchor-PermalinkAnchor e11dlz2y3"
            href="#extra"
          >
            <svg
              class="css-8lz1ax-StyledIconLink e11dlz2y4"
              fill="#80708F"
              height="12px"
              viewBox="0 0 16 16"
              width="12px"
            >
              <path
                d="M4.58,9.5a.71.71,0,0,1-.53-.22L1.16,6.4l0,0h0L1,6.22a.49.49,0,0,1-.11-.14A3.68,3.68,0,0,1,6.06.9.49.49,0,0,1,6.2,1L9.26,4.07a.74.74,0,0,1,0,1.06.75.75,0,0,1-1.06,0L5.32,2.24l0,0A2.19,2.19,0,0,0,2.18,5.29L5.11,8.22a.75.75,0,0,1,0,1.06A.74.74,0,0,1,4.58,9.5Z"
              />
              <path
                d="M12.21,15.91A3.68,3.68,0,0,1,9.9,15.1L9.75,15l-3-3.06a.74.74,0,0,1,0-1.06.75.75,0,0,1,1.06,0l2.89,2.9h0a2.18,2.18,0,0,0,3.09-3.09h0l-2.9-2.9a.77.77,0,0,1,0-1.07.75.75,0,0,1,1.06,0L15,9.77l.11.15a3.69,3.69,0,0,1-2.87,6Z"
              />
              <path
                d="M11.92,12.69a.74.74,0,0,1-.53-.22L3.5,4.58A.75.75,0,1,1,4.56,3.52l7.89,7.89a.74.74,0,0,1,0,1.06A.71.71,0,0,1,11.92,12.69Z"
              />
            </svg>
          </a>
          <h3>
            Additional Data
          </h3>
        </span>
      </div>
      <div
        class="css-108kfzz-ButtonGrid-MergedStyles e1n9g4yq0"
      >
        <button
          aria-disabled="false"
          aria-label="Formatted"
          class=" css-1uzn75c-StyledButton-getColors-getButtonStyles e1b8u3ky2"
          role="button"
          type="button"
        >
          <span
            class="css-vul34l-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
            role="presentation"
          />
          <span
            class="css-1z0n9wg-ButtonLabel e1b8u3ky1"
          >
            Formatted
          </span>
        </button>
        <button
          aria-disabled="false"
          aria-label="Raw"
          class="active css-1n1ixk5-StyledButton-getColors-getButtonStyles e1b8u3ky2"
          role="button"
          type="button"
        >
          <span
            class="css-at526y-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
            role="presentation"
          />
          <span
            class="css-1z0n9wg-ButtonLabel e1b8u3ky1"
          >
            Raw
          </span>
        </button>
      </div>
    </div>
    <div
      class="css-1o3cuay-SectionContents e11dlz2y1"
    />
  </div>
</div>
`;

exports[`KeyValueList renders formatted 1`] = `
<div>
  <table
    class="table key-value css-cijyfx-Table e1h1gsq30"
  >
    <tbody>
      <tr>
        <td
          class="key css-z8tmcy-TableSubject e1h1gsq34"
        >
          andthis
        </td>
        <td
          class="val"
        >
          <div
            class="css-1a2fpst-Tablevalue e1h1gsq33"
          >
            <pre>
              <span>
                0
              </span>
            </pre>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="key css-z8tmcy-TableSubject e1h1gsq34"
        >
          plussomeotherstuff
        </td>
        <td
          class="val"
        >
          <div
            class="css-1a2fpst-Tablevalue e1h1gsq33"
          >
            <pre>
              <span
                class="val-string"
              >
                <span>
                  here
                </span>
              </span>
            </pre>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="key css-z8tmcy-TableSubject e1h1gsq34"
        >
          somestuff
        </td>
        <td
          class="val"
        >
          <div
            class="css-1a2fpst-Tablevalue e1h1gsq33"
          >
            <pre>
              <span
                class="val-dict"
              >
                <span
                  class="val-dict-marker"
                >
                  {
                </span>
                <span
                  class="val-dict-items"
                >
                  <span
                    class="val-dict-pair"
                  >
                    <span
                      class="val-dict-key"
                    >
                      <span
                        class="val-string"
                      >
                        andsomeotherstuff
                      </span>
                    </span>
                    <span
                      class="val-dict-col"
                    >
                      : 
                    </span>
                    <span
                      class="val-dict-value"
                    >
                      <span
                        class="val-string"
                      >
                        <span>
                          here
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="val-dict-marker"
                >
                  }
                </span>
              </span>
            </pre>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`KeyValueList renders raw 1`] = `
<div>
  <table
    class="table key-value css-cijyfx-Table e1h1gsq30"
  >
    <tbody>
      <tr>
        <td
          class="key css-z8tmcy-TableSubject e1h1gsq34"
        >
          andthis
        </td>
        <td
          class="val"
        >
          <div
            class="css-1a2fpst-Tablevalue e1h1gsq33"
          >
            <pre>
              <span
                class="val-string"
              >
                <span>
                  0
                </span>
              </span>
            </pre>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="key css-z8tmcy-TableSubject e1h1gsq34"
        >
          plussomeotherstuff
        </td>
        <td
          class="val"
        >
          <div
            class="css-1a2fpst-Tablevalue e1h1gsq33"
          >
            <pre>
              <span
                class="val-string"
              >
                <span>
                  "here"
                </span>
              </span>
            </pre>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="key css-z8tmcy-TableSubject e1h1gsq34"
        >
          somestuff
        </td>
        <td
          class="val"
        >
          <div
            class="css-1a2fpst-Tablevalue e1h1gsq33"
          >
            <pre>
              <span
                class="val-string"
              >
                <span>
                  {"andsomeotherstuff":"here"}
                </span>
              </span>
            </pre>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
